@@ -1,6 +1,6 @@
 post_install() {
   cat << EOM
-  >>> PLEASE ADD PROPER OPTIONS IN /etc/modprobe.conf IF NEEDED
+  >>> PLEASE ADD PROPER OPTIONS IN /etc/modprobe.d/modprobe.conf IF NEEDED
   >>> e.g. for Series 290:
   >>> echo "options acerhk force_series=290 usedritek=1 verbose=0" >> /etc/modprobe.conf
 EOM
