@@ -1,3 +1,11 @@
+2009-10-10  Corrado Primier  <bardo@aur.archlinux.org>
+
+	* Release bump: 15
+
+	* PKGBUILD: updated for the 2.6.31 kernel
+
+	* acerhk.install: changed modprobe.conf path
+
 2009-06-24  Corrado Primier  <bardo@aur.archlinux.org>
 
 	* Release bump: 14
